# cqrs-grpc-demo

./: Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: rust-ci.yml
proto/: account-api.proto
src/client/: main.rs
src/proto/: account-api.rs
src/server/: arguments.rs  main.rs
src/server/account/: aggregate.rs  commands.rs  events.rs  mod.rs  queries.rs  service.rs
src/server/bank_account/: mod.rs
src/server/bank_account/aggregate/: bank_account.rs  test.rs
src/server/bank_account/commands/: bank_account_command.rs  mod.rs
src/server/bank_account/events/: bank_account_event.rs  mod.rs
src/server/bank_account/framework/: bank_account_repo.rs  mod.rs
src/server/bank_account/queries/: bank_account_query.rs  mod.rs  simple_logging_query_processor.rs
src/server/bank_account/service/: bank_account_service.rs  mod.rs
src/server/cqrs/: db.rs  repo.rs
src/server/tests/: test.rs
