[package]
name = "cqrs-grpc-demo"
version = "0.1.0"
edition = "2018"
authors = ["Bassem Girgis <bgirgis@pm.me>"]


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
# grpc minimum
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }
# structopt
structopt = { version = "0.3", features = ["paw"] }
#paw = "1.0"
# CQRS framework and postgres implementation
cqrs-es2 = "^0.2"
postgres-es2 = "^0.2"
# serialization
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
# postgres driver
tokio-postgres = { version = "^0.7", features = ["with-serde_json-1"] }
# other
chrono = "0.4.11"

[build-dependencies]
tonic-build = "0.5"
